[Fix]: corrected alignment problems in the search section

--- a/web_static/styles/home_styles.css
+++ b/web_static/styles/home_styles.css
@@ -98,19 +98,27 @@ header{
     color: white;
 }
 
+.search-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .search-form input{
-    height: 35px;
+    height: 38px;
     width: 500px;
     border-radius: 10px;
     border: none;
-    margin: 20px 0;
+    margin: 20px 10px;
+    font-size: 16px;
 }
 
 .search-form button{
-    height: 38px;
+    height: 40px;
     width: 100px;
+    margin: 0 10px;
     font-size: 20px;
-    border-radius: 15px;
+    border-radius: 10px;
     border: none;
     background-color: orangered;
     color: white;
